Use dynamic variables in nginx based on env instead of hardcoding

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,3 +1,8 @@
 FROM nginx:latest
 # Copy config as template so nginx automatically substitutes environment variables
 COPY default.conf /etc/nginx/templates/default.conf.template
+
+# Expose Cloud Run port (default 8080, overridden to 80 in local docker-compose)
+ENV PORT 8080
+EXPOSE 8080
+CMD ["nginx", "-g", "daemon off;"]
