--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -1,9 +1,4 @@
 # AI Assistance Disclosure:
-# Tool: GitHub Copilot (model: Claude Sonnet 4), date: 2025-10-13
-# Purpose: To remove frontend proxying from API Gateway configuration, keeping only API service routing for separate frontend deployment.
-# Author Review: I validated correctness, security, and performance of the configuration.
-
-# AI Assistance Disclosure:
 # Tool: GitHub Copilot (model: Claude Sonnet 4), date: 2025-09-24
 # Purpose: To update Nginx configuration with verification routes for email verification functionality.
 # Author Review: I validated correctness, security, and performance of the configuration.
@@ -14,8 +9,8 @@
 # Author Review: I validated correctness, security, and performance of the configuration.
 
 server {
-    listen       80;
-    listen  [::]:80;
+    listen       ${PORT};
+    listen  [::]:${PORT};
     server_name  localhost;
 
     #access_log  /var/log/nginx/host.access.log  main;
@@ -28,7 +23,7 @@ server {
 
     # User Service API
     location /api/users/ {
-        proxy_pass http://user-service:4000/users/;
+        proxy_pass ${USER_SERVICE_URL}/users/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -53,7 +48,7 @@ server {
 
     # Auth Service API  
     location /api/auth/ {
-        proxy_pass http://user-service:4000/auth/;
+        proxy_pass ${USER_SERVICE_URL}/auth/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -78,7 +73,7 @@ server {
 
     # Verification Service API
     location /api/verification/ {
-        proxy_pass http://user-service:4000/verification/;
+        proxy_pass ${USER_SERVICE_URL}/verification/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -102,7 +97,7 @@ server {
     }
 
     location /api/collab {
-        proxy_pass http://collab-service:8000/api/;
+        proxy_pass ${COLLAB_SERVICE_URL}/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -124,14 +119,14 @@ server {
     }
 
     location /collab-socket {
-        proxy_pass http://collab-service:8000/;
+        proxy_pass ${COLLAB_SERVICE_URL}/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
     }
 
     location /api/matching/ {
-        proxy_pass http://matching-service:3002/matching/;
+        proxy_pass ${MATCHING_SERVICE_URL}/matching/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
