--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -15,14 +15,8 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
-    # Default location - API Gateway only serves API routes
-    location / {
-        return 404 '{"error": "Not Found", "message": "This is an API Gateway. Frontend is served separately."}';
-        add_header Content-Type application/json;
-    }
-
     # User Service API
-    location /api/users/ {
+    location ~ ^/api/users(/|$) {
         proxy_pass ${USER_SERVICE_URL}/users/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -47,7 +41,7 @@ server {
     }
 
     # Auth Service API  
-    location /api/auth/ {
+    location ~ ^/api/auth(/|$) {
         proxy_pass ${USER_SERVICE_URL}/auth/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -72,7 +66,7 @@ server {
     }
 
     # Verification Service API
-    location /api/verification/ {
+    location ~ ^/api/verification(/|$) {
         proxy_pass ${USER_SERVICE_URL}/verification/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -146,6 +140,13 @@ server {
     #         return 204;
     #     }
     # }
+
+    # Default location - API Gateway only serves API routes
+    # This MUST come after all specific API routes
+    location / {
+        return 404 '{"error": "Not Found", "message": "This is an API Gateway. Frontend is served separately."}';
+        add_header Content-Type application/json;
+    }
 
     # Health check endpoint
     location /health {
