Try to fix api gateway deploy

--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -16,7 +16,7 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     # User Service API
-    location ~ ^/api/users(/|$) {
+    location /api/users/ {
         proxy_pass ${USER_SERVICE_URL}/users/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -41,7 +41,7 @@ server {
     }
 
     # Auth Service API  
-    location ~ ^/api/auth(/|$) {
+    location /api/auth/ {
         proxy_pass ${USER_SERVICE_URL}/auth/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -66,7 +66,7 @@ server {
     }
 
     # Verification Service API
-    location ~ ^/api/verification(/|$) {
+    location /api/verification/ {
         proxy_pass ${USER_SERVICE_URL}/verification/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -141,13 +141,6 @@ server {
     #     }
     # }
 
-    # Default location - API Gateway only serves API routes
-    # This MUST come after all specific API routes
-    location / {
-        return 404 '{"error": "Not Found", "message": "This is an API Gateway. Frontend is served separately."}';
-        add_header Content-Type application/json;
-    }
-
     # Health check endpoint
     location /health {
         access_log off;
@@ -162,6 +155,12 @@ server {
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
+    }
+
+    # Default location - API Gateway only serves API routes
+    location / {
+        return 404 '{"error": "Not Found", "message": "This is an API Gateway. Frontend is served separately."}';
+        add_header Content-Type application/json;
     }
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
