Add debugging to nginx

--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -148,6 +148,13 @@ server {
         add_header Content-Type application/json;
     }
 
+    # Debug endpoint to check environment variables
+    location /debug/config {
+        access_log off;
+        return 200 '{"USER_SERVICE_URL": "${USER_SERVICE_URL}", "FRONTEND_BASE_URL": "${FRONTEND_BASE_URL}", "PORT": "${PORT}"}';
+        add_header Content-Type application/json;
+    }
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
