--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -18,7 +18,7 @@ server {
     # User Service API
     location /api/users/ {
         proxy_pass ${USER_SERVICE_URL}/users/;
-        proxy_set_header Host $host;
+        proxy_set_header Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -43,7 +43,7 @@ server {
     # Auth Service API  
     location /api/auth/ {
         proxy_pass ${USER_SERVICE_URL}/auth/;
-        proxy_set_header Host $host;
+        proxy_set_header Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -68,7 +68,7 @@ server {
     # Verification Service API
     location /api/verification/ {
         proxy_pass ${USER_SERVICE_URL}/verification/;
-        proxy_set_header Host $host;
+        proxy_set_header Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
