--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -15,6 +15,12 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
+    # Default location - API Gateway only serves API routes
+    location / {
+        return 404 '{"error": "Not Found", "message": "This is an API Gateway. Frontend is served separately."}';
+        add_header Content-Type application/json;
+    }
+
     # User Service API
     location /api/users/ {
         proxy_pass ${USER_SERVICE_URL}/users/;
