Uncomment matching service

--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -125,27 +125,27 @@ server {
     #     proxy_set_header Connection "Upgrade";
     # }
 
-    # location /api/matching/ {
-    #     proxy_pass ${MATCHING_SERVICE_URL}/matching/;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
+    location /api/matching/ {
+        proxy_pass ${MATCHING_SERVICE_URL}/matching/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
-    #     # CORS - Always replace headers, don't append
-    #     proxy_hide_header Access-Control-Allow-Origin;
-    #     proxy_hide_header Access-Control-Allow-Methods;
-    #     proxy_hide_header Access-Control-Allow-Headers;
-    #     proxy_hide_header Access-Control-Allow-Credentials;
-    #     add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
-    #     add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-    #     add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
-    #     add_header Access-Control-Allow-Credentials 'true' always;
+        # CORS - Always replace headers, don't append
+        proxy_hide_header Access-Control-Allow-Origin;
+        proxy_hide_header Access-Control-Allow-Methods;
+        proxy_hide_header Access-Control-Allow-Headers;
+        proxy_hide_header Access-Control-Allow-Credentials;
+        add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
+        add_header Access-Control-Allow-Credentials 'true' always;
 
-    #     if ($request_method = 'OPTIONS') {
-    #         return 204;
-    #     }
-    # }
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
+    }
 
     # Health check endpoint
     location /health {
