Trigger auto build and deploy

--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -150,7 +150,10 @@ server {
     # Health check endpoint
     location /health {
         access_log off;
-        return 200 '{"status": "healthy", "timestamp": "$time_iso8601"}';
+        return 200 '{
+            "status": "healthy", 
+            "timestamp": "$time_iso8601"
+        }';
         add_header Content-Type application/json;
     }
 
