--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -98,7 +98,7 @@ server {
 
     # location /api/collab {
     #     proxy_pass ${COLLAB_SERVICE_URL}/api/;
-    #     proxy_set_header Host $host;
+    #     proxy_set_header Host $proxy_host;
     #     proxy_set_header X-Real-IP $remote_addr;
     #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     #     proxy_set_header X-Forwarded-Proto $scheme;
@@ -127,7 +127,7 @@ server {
 
     location /api/matching/ {
         proxy_pass ${MATCHING_SERVICE_URL}/matching/;
-        proxy_set_header Host $host;
+        proxy_set_header Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -137,6 +137,7 @@ server {
         proxy_hide_header Access-Control-Allow-Methods;
         proxy_hide_header Access-Control-Allow-Headers;
         proxy_hide_header Access-Control-Allow-Credentials;
+
         add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
