--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -15,17 +15,6 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
-    # Global CORS headers for all responses
-    add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
-    add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-    add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
-    add_header Access-Control-Allow-Credentials 'true' always;
-
-    # Handle preflight OPTIONS requests globally
-    if ($request_method = 'OPTIONS') {
-        return 204;
-    }
-
     # Default location - API Gateway only serves API routes
     location / {
         return 404 '{"error": "Not Found", "message": "This is an API Gateway. Frontend is served separately."}';
@@ -40,11 +29,21 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # CORS headers handled globally above
+        # CORS - Always replace headers, don't append
         proxy_hide_header Access-Control-Allow-Origin;
         proxy_hide_header Access-Control-Allow-Methods;
         proxy_hide_header Access-Control-Allow-Headers;
         proxy_hide_header Access-Control-Allow-Credentials;
+
+        add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
+        add_header Access-Control-Allow-Credentials 'true' always;
+        
+        # Handle preflight OPTIONS requests
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
 
     # Auth Service API  
@@ -55,11 +54,21 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # CORS headers handled globally above
+        # CORS - Always replace headers, don't append
         proxy_hide_header Access-Control-Allow-Origin;
         proxy_hide_header Access-Control-Allow-Methods;
         proxy_hide_header Access-Control-Allow-Headers;
         proxy_hide_header Access-Control-Allow-Credentials;
+
+        add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
+        add_header Access-Control-Allow-Credentials 'true' always;
+        
+        # Handle preflight OPTIONS requests
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
 
     # Verification Service API
@@ -70,11 +79,21 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # CORS headers handled globally above
+        # CORS - Always replace headers, don't append
         proxy_hide_header Access-Control-Allow-Origin;
         proxy_hide_header Access-Control-Allow-Methods;
         proxy_hide_header Access-Control-Allow-Headers;
         proxy_hide_header Access-Control-Allow-Credentials;
+
+        add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
+        add_header Access-Control-Allow-Credentials 'true' always;
+        
+        # Handle preflight OPTIONS requests
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
 
     # location /api/collab {
@@ -84,11 +103,19 @@ server {
     #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     #     proxy_set_header X-Forwarded-Proto $scheme;
 
-    #     # CORS headers handled globally above
+    #     # CORS - Always replace headers, don't append
     #     proxy_hide_header Access-Control-Allow-Origin;
     #     proxy_hide_header Access-Control-Allow-Methods;
     #     proxy_hide_header Access-Control-Allow-Headers;
     #     proxy_hide_header Access-Control-Allow-Credentials;
+    #     add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
+    #     add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+    #     add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
+    #     add_header Access-Control-Allow-Credentials 'true' always;
+
+    #     if ($request_method = 'OPTIONS') {
+    #         return 204;
+    #     }
     # }
 
     # location /collab-socket {
@@ -105,11 +132,20 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # CORS headers handled globally above
+        # CORS - Always replace headers, don't append
         proxy_hide_header Access-Control-Allow-Origin;
         proxy_hide_header Access-Control-Allow-Methods;
         proxy_hide_header Access-Control-Allow-Headers;
         proxy_hide_header Access-Control-Allow-Credentials;
+
+        add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
+        add_header Access-Control-Allow-Credentials 'true' always;
+
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
 
     # Health check endpoint
