--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -23,6 +23,15 @@ server {
 
     # User Service API
     location /api/users/ {
+        # Handle preflight OPTIONS requests first
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
+            add_header Access-Control-Allow-Credentials 'true' always;
+            return 204;
+        }
+        
         proxy_pass ${USER_SERVICE_URL}/users/;
         proxy_set_header Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -39,15 +48,19 @@ server {
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
         add_header Access-Control-Allow-Credentials 'true' always;
-        
-        # Handle preflight OPTIONS requests
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
     }
 
     # Auth Service API  
     location /api/auth/ {
+        # Handle preflight OPTIONS requests first
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
+            add_header Access-Control-Allow-Credentials 'true' always;
+            return 204;
+        }
+        
         proxy_pass ${USER_SERVICE_URL}/auth/;
         proxy_set_header Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -64,15 +77,19 @@ server {
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
         add_header Access-Control-Allow-Credentials 'true' always;
-        
-        # Handle preflight OPTIONS requests
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
     }
 
     # Verification Service API
     location /api/verification/ {
+        # Handle preflight OPTIONS requests first
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
+            add_header Access-Control-Allow-Credentials 'true' always;
+            return 204;
+        }
+        
         proxy_pass ${USER_SERVICE_URL}/verification/;
         proxy_set_header Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -89,20 +106,24 @@ server {
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
         add_header Access-Control-Allow-Credentials 'true' always;
-        
-        # Handle preflight OPTIONS requests
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
     }
 
     # location /api/collab {
+    #     # Handle preflight OPTIONS requests first
+    #     if ($request_method = 'OPTIONS') {
+    #         add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
+    #         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+    #         add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
+    #         add_header Access-Control-Allow-Credentials 'true' always;
+    #         return 204;
+    #     }
+    #     
     #     proxy_pass ${COLLAB_SERVICE_URL}/api/;
     #     proxy_set_header Host $proxy_host;
     #     proxy_set_header X-Real-IP $remote_addr;
     #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     #     proxy_set_header X-Forwarded-Proto $scheme;
-
+    #
     #     # CORS - Always replace headers, don't append
     #     proxy_hide_header Access-Control-Allow-Origin;
     #     proxy_hide_header Access-Control-Allow-Methods;
@@ -112,10 +133,6 @@ server {
     #     add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
     #     add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
     #     add_header Access-Control-Allow-Credentials 'true' always;
-
-    #     if ($request_method = 'OPTIONS') {
-    #         return 204;
-    #     }
     # }
 
     # location /collab-socket {
@@ -126,6 +143,15 @@ server {
     # }
 
     location /api/matching/ {
+        # Handle preflight OPTIONS requests first
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
+            add_header Access-Control-Allow-Credentials 'true' always;
+            return 204;
+        }
+        
         proxy_pass ${MATCHING_SERVICE_URL}/matching/;
         proxy_set_header Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -142,10 +168,6 @@ server {
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
         add_header Access-Control-Allow-Credentials 'true' always;
-
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
     }
 
     # Health check endpoint
