Revert "Try to fix CORS"
This reverts commit 12906e1b92715b25eb35b6d1b177b82f62bf9183.

--- a/api-gateway/default.conf
+++ b/api-gateway/default.conf
@@ -23,15 +23,6 @@ server {
 
     # User Service API
     location /api/users/ {
-        # Handle preflight OPTIONS requests first
-        if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
-            add_header Access-Control-Allow-Credentials 'true' always;
-            return 204;
-        }
-        
         proxy_pass ${USER_SERVICE_URL}/users/;
         proxy_set_header Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -48,19 +39,15 @@ server {
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
         add_header Access-Control-Allow-Credentials 'true' always;
+        
+        # Handle preflight OPTIONS requests
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
 
     # Auth Service API  
     location /api/auth/ {
-        # Handle preflight OPTIONS requests first
-        if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
-            add_header Access-Control-Allow-Credentials 'true' always;
-            return 204;
-        }
-        
         proxy_pass ${USER_SERVICE_URL}/auth/;
         proxy_set_header Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -77,19 +64,15 @@ server {
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
         add_header Access-Control-Allow-Credentials 'true' always;
+        
+        # Handle preflight OPTIONS requests
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
 
     # Verification Service API
     location /api/verification/ {
-        # Handle preflight OPTIONS requests first
-        if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
-            add_header Access-Control-Allow-Credentials 'true' always;
-            return 204;
-        }
-        
         proxy_pass ${USER_SERVICE_URL}/verification/;
         proxy_set_header Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -106,24 +89,20 @@ server {
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
         add_header Access-Control-Allow-Credentials 'true' always;
+        
+        # Handle preflight OPTIONS requests
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
 
     # location /api/collab {
-    #     # Handle preflight OPTIONS requests first
-    #     if ($request_method = 'OPTIONS') {
-    #         add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
-    #         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-    #         add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
-    #         add_header Access-Control-Allow-Credentials 'true' always;
-    #         return 204;
-    #     }
-    #     
     #     proxy_pass ${COLLAB_SERVICE_URL}/api/;
     #     proxy_set_header Host $proxy_host;
     #     proxy_set_header X-Real-IP $remote_addr;
     #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     #     proxy_set_header X-Forwarded-Proto $scheme;
-    #
+
     #     # CORS - Always replace headers, don't append
     #     proxy_hide_header Access-Control-Allow-Origin;
     #     proxy_hide_header Access-Control-Allow-Methods;
@@ -133,6 +112,10 @@ server {
     #     add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
     #     add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
     #     add_header Access-Control-Allow-Credentials 'true' always;
+
+    #     if ($request_method = 'OPTIONS') {
+    #         return 204;
+    #     }
     # }
 
     # location /collab-socket {
@@ -143,15 +126,6 @@ server {
     # }
 
     location /api/matching/ {
-        # Handle preflight OPTIONS requests first
-        if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin '${FRONTEND_BASE_URL}' always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
-            add_header Access-Control-Allow-Credentials 'true' always;
-            return 204;
-        }
-        
         proxy_pass ${MATCHING_SERVICE_URL}/matching/;
         proxy_set_header Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -168,6 +142,10 @@ server {
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cookie" always;
         add_header Access-Control-Allow-Credentials 'true' always;
+
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
 
     # Health check endpoint
