Add comments for env.local

--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,2 +1,4 @@
+# do not put secrets here as .env.local can be accessed by frontend code
+# and will be committed to version control
 NEXT_PUBLIC_API_GATEWAY_BASE_URL=http://localhost
 NEXT_PUBLIC_USER_SERVICE_URL=http://user-service:4000
