--- a/frontend/.env.local.production
+++ b/frontend/.env.local.production
@@ -1,2 +1,4 @@
+# do not put secrets here as .env.local can be accessed by frontend code
+# and will be committed to version control
 NEXT_PUBLIC_API_GATEWAY_BASE_URL=https://cs3219-ay2526s1-project-g01-api-gateway-151036034449.asia-southeast1.run.app
 NEXT_PUBLIC_USER_SERVICE_URL=https://cs3219-ay2526s1-project-g01-api-gateway-151036034449.asia-southeast1.run.app/api
