--- a/collab-service/Dockerfile
+++ b/collab-service/Dockerfile
@@ -1,13 +1,19 @@
-FROM node:20-alpine
+FROM node:20-alpine AS builder
 
 WORKDIR /app
 
 COPY package*.json .
 
-RUN npm install
+RUN npm ci --only=production
 
 COPY . .
 
+FROM node:20-alpine
+
+WORKDIR /app
+
+COPY --from=builder . /app
+
 EXPOSE ${PORT}
 
-CMD ["npm", "start"]
+CMD ["node", "server.js"]
