Fix frontend websocket

--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -2,3 +2,4 @@
 # and will be committed to version control
 NEXT_PUBLIC_API_GATEWAY_BASE_URL=http://localhost
 NEXT_PUBLIC_USER_SERVICE_URL=http://user-service:4000
+NEXT_PUBLIC_COLLAB_WS_URL=ws://localhost/collab-socket
