--- a/frontend/.env.local.production
+++ b/frontend/.env.local.production
@@ -2,3 +2,4 @@
 # and will be committed to version control
 NEXT_PUBLIC_API_GATEWAY_BASE_URL=https://cs3219-ay2526s1-project-g01-api-gateway-151036034449.asia-southeast1.run.app
 NEXT_PUBLIC_USER_SERVICE_URL=https://cs3219-ay2526s1-project-g01-api-gateway-151036034449.asia-southeast1.run.app/api
+NEXT_PUBLIC_COLLAB_WS_URL=wss://cs3219-ay2526s1-project-g01-api-gateway-151036034449.asia-southeast1.run.app/collab-socket
