--- a/collab-service/.env.sample
+++ b/collab-service/.env.sample
@@ -2,7 +2,7 @@
 # it is safe to commit as it is not a secret password but only a local one based on our global .env setup
 # ensure that this matches the password in root .env file
 PORT=8000
-REDIS_PASSWORD=SecretPassword987!
+REDIS_PASSWORD=example
 REDIS_HOST=redis-collab-service
 REDIS_PORT= 6379
 REDIS_DB=0
